Fix overlapping icon on header links

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -187,7 +187,7 @@ table {
     border-right: 2px solid $white;
     font-weight: normal;
     min-width: 280px;
-    padding: 15px 30px 15px 15px;
+    padding: 15px 45px 15px 15px;
     position: relative;
     vertical-align: middle;
 
